# torrent-cli

./: README.md  pyproject.toml  requirements.txt  setup.py
torrent_cli/: cli.py
